[metadata]
name = inspired
version = 0.0.1
author = William E Fondrie
author_email = wfondrie@uw.edu
description = Effortlessly inject inspirational messages into your Python code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wfondrie/inspiration
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6